gen/nl/saxion/cos/ViperParser.java
// Generated from E:/Coding/Saxion/2021-2022/Code-S3/Compilers/78/src/nl/saxion/cos\Viper.g4 by ANTLR 4.9.2
package nl.saxion.cos;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ViperParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		V_CLASS_KW=32, V_CASE_KW=33, V_SWITCH_KW=34, V_ELSE_KW=35, V_ELSEIF_KW=36, 
		V_IF_KW=37, V_BREAK_KW=38, V_CONTINUE_KW=39, V_RETURN_KW=40, V_NEW_KW=41, 
		V_STATIC_KW=42, V_PUBLIC_KW=43, V_PRIVATE_KW=44, V_WHILE_KW=45, V_THIS_KW=46, 
		V_STRING_KW=47, V_BOOL_KW=48, V_FLOAT_KW=49, V_INT_KW=50, V_STRING=51, 
		V_BOOL=52, V_FLOAT=53, V_INT=54, V_IDENTIFIER=55, V_WS=56, V_COMMENT=57;
	public static final int
		RULE_program = 0, RULE_vStatement = 1, RULE_vMethodCall = 2, RULE_vClass = 3, 
		RULE_vSwitch = 4, RULE_vCase = 5, RULE_vIf = 6, RULE_vWhile = 7, RULE_vBreak = 8, 
		RULE_vContinue = 9, RULE_vReturn = 10, RULE_vBlock = 11, RULE_vAssignment = 12, 
		RULE_vDeclaration = 13, RULE_vMethod = 14, RULE_vNewObject = 15, RULE_vExpression = 16, 
		RULE_vUnaryOperation = 17, RULE_vType = 18, RULE_vAccess = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "vStatement", "vMethodCall", "vClass", "vSwitch", "vCase", 
			"vIf", "vWhile", "vBreak", "vContinue", "vReturn", "vBlock", "vAssignment", 
			"vDeclaration", "vMethod", "vNewObject", "vExpression", "vUnaryOperation", 
			"vType", "vAccess"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "','", "')'", "'{'", "'}'", "':'", "'='", 
			"'-'", "'!'", "'*'", "'/'", "'%'", "'&'", "'^'", "'|'", "'+'", "'<<'", 
			"'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'", "'||'", 
			"'?'", "'++'", "'--'", "'class'", "'case'", "'switch'", "'else'", "'elseif'", 
			"'if'", "'break'", "'continue'", "'return'", "'new'", "'static'", "'public'", 
			"'private'", "'while'", "'this'", "'string'", "'bool'", "'float'", "'int'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "V_CLASS_KW", "V_CASE_KW", 
			"V_SWITCH_KW", "V_ELSE_KW", "V_ELSEIF_KW", "V_IF_KW", "V_BREAK_KW", "V_CONTINUE_KW", 
			"V_RETURN_KW", "V_NEW_KW", "V_STATIC_KW", "V_PUBLIC_KW", "V_PRIVATE_KW", 
			"V_WHILE_KW", "V_THIS_KW", "V_STRING_KW", "V_BOOL_KW", "V_FLOAT_KW", 
			"V_INT_KW", "V_STRING", "V_BOOL", "V_FLOAT", "V_INT", "V_IDENTIFIER", 
			"V_WS", "V_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Viper.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ViperParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ViperParser.EOF, 0); }
		public List<VStatementContext> vStatement() {
			return getRuleContexts(VStatementContext.class);
		}
		public VStatementContext vStatement(int i) {
			return getRuleContext(VStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << T__9) | (1L << T__10) | (1L << T__29) | (1L << T__30) | (1L << V_CLASS_KW) | (1L << V_SWITCH_KW) | (1L << V_IF_KW) | (1L << V_BREAK_KW) | (1L << V_CONTINUE_KW) | (1L << V_RETURN_KW) | (1L << V_NEW_KW) | (1L << V_STATIC_KW) | (1L << V_PUBLIC_KW) | (1L << V_PRIVATE_KW) | (1L << V_WHILE_KW) | (1L << V_THIS_KW) | (1L << V_STRING_KW) | (1L << V_BOOL_KW) | (1L << V_FLOAT_KW) | (1L << V_INT_KW) | (1L << V_STRING) | (1L << V_BOOL) | (1L << V_FLOAT) | (1L << V_INT) | (1L << V_IDENTIFIER))) != 0)) {
				{
				{
				setState(40);
				vStatement();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VStatementContext extends ParserRuleContext {
		public VDeclarationContext vDeclaration() {
			return getRuleContext(VDeclarationContext.class,0);
		}
		public VAssignmentContext vAssignment() {
			return getRuleContext(VAssignmentContext.class,0);
		}
		public VBlockContext vBlock() {
			return getRuleContext(VBlockContext.class,0);
		}
		public VMethodContext vMethod() {
			return getRuleContext(VMethodContext.class,0);
		}
		public VReturnContext vReturn() {
			return getRuleContext(VReturnContext.class,0);
		}
		public VContinueContext vContinue() {
			return getRuleContext(VContinueContext.class,0);
		}
		public VBreakContext vBreak() {
			return getRuleContext(VBreakContext.class,0);
		}
		public VWhileContext vWhile() {
			return getRuleContext(VWhileContext.class,0);
		}
		public VIfContext vIf() {
			return getRuleContext(VIfContext.class,0);
		}
		public VSwitchContext vSwitch() {
			return getRuleContext(VSwitchContext.class,0);
		}
		public VClassContext vClass() {
			return getRuleContext(VClassContext.class,0);
		}
		public VUnaryOperationContext vUnaryOperation() {
			return getRuleContext(VUnaryOperationContext.class,0);
		}
		public VMethodCallContext vMethodCall() {
			return getRuleContext(VMethodCallContext.class,0);
		}
		public VNewObjectContext vNewObject() {
			return getRuleContext(VNewObjectContext.class,0);
		}
		public VExpressionContext vExpression() {
			return getRuleContext(VExpressionContext.class,0);
		}
		public VStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VStatementContext vStatement() throws RecognitionException {
		VStatementContext _localctx = new VStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vStatement);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				vDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				vAssignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				vBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				vMethod();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				vReturn();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(53);
				vContinue();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(54);
				vBreak();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(55);
				vWhile();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(56);
				vIf();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(57);
				vSwitch();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(58);
				vClass();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(59);
				vUnaryOperation();
				setState(60);
				match(T__0);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(62);
				vMethodCall();
				setState(63);
				match(T__0);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(65);
				vNewObject();
				setState(66);
				match(T__0);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(68);
				vExpression(0);
				setState(69);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VMethodCallContext extends ParserRuleContext {
		public List<TerminalNode> V_IDENTIFIER() { return getTokens(ViperParser.V_IDENTIFIER); }
		public TerminalNode V_IDENTIFIER(int i) {
			return getToken(ViperParser.V_IDENTIFIER, i);
		}
		public List<VExpressionContext> vExpression() {
			return getRuleContexts(VExpressionContext.class);
		}
		public VExpressionContext vExpression(int i) {
			return getRuleContext(VExpressionContext.class,i);
		}
		public VMethodCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vMethodCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVMethodCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VMethodCallContext vMethodCall() throws RecognitionException {
		VMethodCallContext _localctx = new VMethodCallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vMethodCall);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					match(V_IDENTIFIER);
					setState(74);
					match(T__1);
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(80);
			match(V_IDENTIFIER);
			setState(81);
			match(T__2);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__9) | (1L << T__10) | (1L << T__29) | (1L << T__30) | (1L << V_NEW_KW) | (1L << V_THIS_KW) | (1L << V_STRING) | (1L << V_BOOL) | (1L << V_FLOAT) | (1L << V_INT) | (1L << V_IDENTIFIER))) != 0)) {
				{
				setState(82);
				vExpression(0);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(83);
					match(T__3);
					setState(84);
					vExpression(0);
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(92);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VClassContext extends ParserRuleContext {
		public TerminalNode V_CLASS_KW() { return getToken(ViperParser.V_CLASS_KW, 0); }
		public TerminalNode V_IDENTIFIER() { return getToken(ViperParser.V_IDENTIFIER, 0); }
		public VAccessContext vAccess() {
			return getRuleContext(VAccessContext.class,0);
		}
		public List<VDeclarationContext> vDeclaration() {
			return getRuleContexts(VDeclarationContext.class);
		}
		public VDeclarationContext vDeclaration(int i) {
			return getRuleContext(VDeclarationContext.class,i);
		}
		public List<VMethodContext> vMethod() {
			return getRuleContexts(VMethodContext.class);
		}
		public VMethodContext vMethod(int i) {
			return getRuleContext(VMethodContext.class,i);
		}
		public VClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VClassContext vClass() throws RecognitionException {
		VClassContext _localctx = new VClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==V_PUBLIC_KW || _la==V_PRIVATE_KW) {
				{
				setState(94);
				vAccess();
				}
			}

			setState(97);
			match(V_CLASS_KW);
			setState(98);
			match(V_IDENTIFIER);
			setState(99);
			match(T__5);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << V_STATIC_KW) | (1L << V_PUBLIC_KW) | (1L << V_PRIVATE_KW) | (1L << V_STRING_KW) | (1L << V_BOOL_KW) | (1L << V_FLOAT_KW) | (1L << V_INT_KW) | (1L << V_IDENTIFIER))) != 0)) {
				{
				setState(102);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(100);
					vDeclaration();
					}
					break;
				case 2:
					{
					setState(101);
					vMethod();
					}
					break;
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VSwitchContext extends ParserRuleContext {
		public TerminalNode V_SWITCH_KW() { return getToken(ViperParser.V_SWITCH_KW, 0); }
		public VExpressionContext vExpression() {
			return getRuleContext(VExpressionContext.class,0);
		}
		public List<VCaseContext> vCase() {
			return getRuleContexts(VCaseContext.class);
		}
		public VCaseContext vCase(int i) {
			return getRuleContext(VCaseContext.class,i);
		}
		public VSwitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vSwitch; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVSwitch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VSwitchContext vSwitch() throws RecognitionException {
		VSwitchContext _localctx = new VSwitchContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vSwitch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(V_SWITCH_KW);
			setState(110);
			match(T__2);
			setState(111);
			vExpression(0);
			setState(112);
			match(T__4);
			setState(113);
			match(T__5);
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				vCase();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==V_CASE_KW );
			setState(119);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VCaseContext extends ParserRuleContext {
		public TerminalNode V_CASE_KW() { return getToken(ViperParser.V_CASE_KW, 0); }
		public VExpressionContext vExpression() {
			return getRuleContext(VExpressionContext.class,0);
		}
		public VStatementContext vStatement() {
			return getRuleContext(VStatementContext.class,0);
		}
		public VBlockContext vBlock() {
			return getRuleContext(VBlockContext.class,0);
		}
		public VCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vCase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVCase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VCaseContext vCase() throws RecognitionException {
		VCaseContext _localctx = new VCaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(V_CASE_KW);
			setState(122);
			vExpression(0);
			setState(123);
			match(T__7);
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(124);
				vStatement();
				setState(125);
				match(T__0);
				}
				break;
			case 2:
				{
				setState(127);
				vBlock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VIfContext extends ParserRuleContext {
		public VExpressionContext vCondition;
		public TerminalNode V_IF_KW() { return getToken(ViperParser.V_IF_KW, 0); }
		public List<VBlockContext> vBlock() {
			return getRuleContexts(VBlockContext.class);
		}
		public VBlockContext vBlock(int i) {
			return getRuleContext(VBlockContext.class,i);
		}
		public List<VExpressionContext> vExpression() {
			return getRuleContexts(VExpressionContext.class);
		}
		public VExpressionContext vExpression(int i) {
			return getRuleContext(VExpressionContext.class,i);
		}
		public List<TerminalNode> V_ELSEIF_KW() { return getTokens(ViperParser.V_ELSEIF_KW); }
		public TerminalNode V_ELSEIF_KW(int i) {
			return getToken(ViperParser.V_ELSEIF_KW, i);
		}
		public TerminalNode V_ELSE_KW() { return getToken(ViperParser.V_ELSE_KW, 0); }
		public VIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VIfContext vIf() throws RecognitionException {
		VIfContext _localctx = new VIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(V_IF_KW);
			setState(131);
			match(T__2);
			setState(132);
			((VIfContext)_localctx).vCondition = vExpression(0);
			setState(133);
			match(T__4);
			setState(134);
			vBlock();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==V_ELSEIF_KW) {
				{
				{
				setState(135);
				match(V_ELSEIF_KW);
				setState(136);
				match(T__2);
				setState(137);
				vExpression(0);
				setState(138);
				match(T__4);
				setState(139);
				vBlock();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==V_ELSE_KW) {
				{
				setState(146);
				match(V_ELSE_KW);
				setState(147);
				vBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VWhileContext extends ParserRuleContext {
		public TerminalNode V_WHILE_KW() { return getToken(ViperParser.V_WHILE_KW, 0); }
		public VExpressionContext vExpression() {
			return getRuleContext(VExpressionContext.class,0);
		}
		public VBlockContext vBlock() {
			return getRuleContext(VBlockContext.class,0);
		}
		public VWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vWhile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VWhileContext vWhile() throws RecognitionException {
		VWhileContext _localctx = new VWhileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(V_WHILE_KW);
			setState(151);
			match(T__2);
			setState(152);
			vExpression(0);
			setState(153);
			match(T__4);
			setState(154);
			vBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VBreakContext extends ParserRuleContext {
		public TerminalNode V_BREAK_KW() { return getToken(ViperParser.V_BREAK_KW, 0); }
		public VBreakContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vBreak; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVBreak(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VBreakContext vBreak() throws RecognitionException {
		VBreakContext _localctx = new VBreakContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vBreak);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(V_BREAK_KW);
			setState(157);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContinueContext extends ParserRuleContext {
		public TerminalNode V_CONTINUE_KW() { return getToken(ViperParser.V_CONTINUE_KW, 0); }
		public VContinueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vContinue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVContinue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VContinueContext vContinue() throws RecognitionException {
		VContinueContext _localctx = new VContinueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vContinue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(V_CONTINUE_KW);
			setState(160);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VReturnContext extends ParserRuleContext {
		public TerminalNode V_RETURN_KW() { return getToken(ViperParser.V_RETURN_KW, 0); }
		public VExpressionContext vExpression() {
			return getRuleContext(VExpressionContext.class,0);
		}
		public VReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vReturn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViperVisitor ) return ((ViperVisitor<? extends T>)visitor).visitVReturn(this);
			else return visitor.visitChildren(this);
		}
	}
